--- a/CSSProjekat1/onama.html
+++ b/CSSProjekat1/onama.html
@@ -28,10 +28,10 @@ Aziji i zemljama ZND-a stotine hiljada ljudi veruje brendu SrbWellness.<p>
 	<li>Kozmetiku</li>
 </ul>
 <p><b>Slike nekih naših proizvoda:</b></p>
-<img src = "slike/slika1.png" width = "20%" height="30%">
-<img src = "slike/slika2.png" width = "20%" height="30%">
-<img src = "slike/slika3.png" width = "20%" height="30%">
-<img src = "slike/slika4.jpg" width = "20%" height="30%">
+<img src = "slika1.png" width = "20%" height="30%">
+<img src = "slika2.png" width = "20%" height="30%">
+<img src = "slika3.png" width = "20%" height="30%">
+<img src = "slika4.jpg" width = "20%" height="30%">
 </body>
 <footer>
 Marko Marjanović IT93/21
