--- a/CSSProjekat1/onama.html
+++ b/CSSProjekat1/onama.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="stil.css" />
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="keywords" content="wellness, proteini, suplementacija, zdrava ishrana, srbija wellness, srbija proteini, zdravi preparati"/>
 	<meta name="Responsivnost" content="true">
 </head>
 <body>
