--- a/CSSProjekat1/onama.html
+++ b/CSSProjekat1/onama.html
@@ -7,6 +7,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="keywords" content="wellness, proteini, suplementacija, zdrava ishrana, srbija wellness, srbija proteini, zdravi preparati"/>
 	<meta name="Responsivnost" content="true">
+	<meta property="og:title" content="Hranite se zdravo i pravilno!" />
+	<meta property="og:description" content="Najbolji suplementi i preparati na jednom mestu" />
 </head>
 <body>
 <ul id = "ul1">
